# Okapi-ROS2

./: README.md
launch/: rfidbot_tags_localization.launch.xml
rfidbot_tags_localization/: rfh_tags_localization_main_ros2.py
rfidbot_tags_localization/data_recorders/: __init__.py  rfh_tags_localization_fix_power_rawdata_recorder.py
rfidbot_tags_localization/libs/: __init__.py  rfidbot_tags_debuger.py
rfidbot_tags_localization/localizers/: phase_differ_localizer.py  recursive_bayes_localizer_gpu_3d.py
ros2_okapi/src/rfh_controller/: CMakeLists.txt  package.xml
ros2_okapi/src/rfh_controller/launch/: rfh_realsensemapping_bringup.launch.xml  rfh_rfid_bringup.launch.xml
ros2_okapi/src/rfh_controller/launch/config/: okapi.rviz
ros2_okapi/src/rfh_controller/rfh_controller/: CMakeLists.txt  package.xml  rfh_gui_main.py  rfh_system_monitor.py  setup.cfg  setup.py
ros2_okapi/src/rfh_controller/rfh_controller/launch/: rfh_realsensemapping_bringup.launch.xml  rfh_rfid_bringup.launch.xml
ros2_okapi/src/rfh_controller/rfh_controller/launch/config/: okapi.rviz
ros2_okapi/src/rfh_controller/rfh_controller/rfh_controller/: rfh_controller_console.py  rfh_sys_controller.py
ros2_okapi/src/rfh_handheld_description/: CMakeLists.txt  package.xml
ros2_okapi/src/rfh_handheld_description/launch/: environment_description.launch  okapicart_description.launch  rfhhandheld_environment_description
ros2_okapi/src/rfh_handheld_description/rfh_handheld_description/: CMakeLists.txt  package.xml
ros2_okapi/src/rfh_handheld_description/rfh_handheld_description/launch/: rfhhandheld_description.launch  rfhhandheld_description_env.launch  zebraRFD8500reader_description.launch.xml
ros2_okapi/src/rfh_handheld_description/rfh_handheld_description/urdf/: environment.xacro  rfhHandheld.xacro  rfhInput.csv
ros2_okapi/src/rfh_handheld_description/urdf/: config.py  environment - Copy.xacro  okapicart.xacro  xacroGenerator.py  zebraRFD8500reader.xacro
ros2_okapi/src/rfh_share_lib/: setup.cfg
ros2_okapi/src/rfh_share_lib/rfh_share_lib/: package.xml  rfidbot_antenna_model_base.py  setup.py
ros2_okapi/src/rfh_share_lib/rfh_share_lib/rfh_share_lib/: rfidbot_set_para_2_reader.py
ros2_okapi/src/rfidbot_tags_interfaces/msg/: TagReader.msg
ros2_okapi/src/rfidbot_tags_interfaces/rfidbot_tags_interfaces/: CMakeLists.txt  package.xml
ros2_okapi/src/rfidbot_tags_interfaces/rfidbot_tags_interfaces/srv/: TagLocalizing.srv
ros2_okapi/src/rfidbot_tags_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_okapi/src/rfidbot_tags_localization/launch/: rfh_tags_localization.launch.xml  rfidbot_tags_localization.launch.xml
ros2_okapi/src/rfidbot_tags_localization/rfidbot_tags_localization/: rfh_tags_localization_main_ros2.py
ros2_okapi/src/rfidbot_tags_localization/rfidbot_tags_localization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_okapi/src/rfidbot_tags_localization/rfidbot_tags_localization/data_recorders/: rfh_tags_localization_fix_power_rawdata_recorder.py  rfidbot_tags_localization_rawdata_recorder_base.py  rfidbot_tags_localization_readrate_rawdata_base.py
ros2_okapi/src/rfidbot_tags_localization/rfidbot_tags_localization/libs/: rfh_tags_localization_pose_shifter.py  rfidbot_set_tags_location_marker.py  rfidbot_tags_debuger.py
ros2_okapi/src/rfidbot_tags_localization/rfidbot_tags_localization/localizers/: __init__.py  recursive_bayes_localizer_gpu_3d.py  rfh_3d_recursive_bayes_localizer.py  rfidbot_tags_recursive_bayes_localize.py
ros2_okapi/src/rfidbot_tags_reader/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_okapi/src/rfidbot_tags_reader/include/rfidbot_tags_reader/: ltkcpp.h  ltkcpp_platform.h  out_ltkcpp.h  rfidbot_tags_reader_main.h
ros2_okapi/src/rfidbot_tags_reader/launch/: rfidbot_tags_reading.launch.xml  rfidbot_tags_reading_RFD8500.launch.xml  rfidbot_tags_reading_py.launch.xml
ros2_okapi/src/rfidbot_tags_reader/rfidbot_tags_reader/: __init__.py  llrp.py  llrp_decoder.py  llrp_proto.py  rfd8500_reader.py  rfidbot_tags_reader_api.py  rfidbot_tags_reader_main_py.py
ros2_okapi/src/rfidbot_tags_reader/rfidbot_tags_reader/scripts/: __init__.py  llrp.py  llrp_proto.py  rfd8500_reader.py  rfidbot_tags_reader_main.py  rfidbot_tags_reader_test.py
ros2_okapi/src/rfidbot_tags_reader/src/: rfidbot_tags_reader_main.cpp
ros2_okapi/src/rviz_panel/: CMakeLists.txt  package.xml  rviz_plugin.xml
ros2_okapi/src/rviz_panel/include/rviz_panel/: rviz_panel.hpp
ros2_okapi/src/rviz_panel/inventoryreports/: inventory_2024_02_09_17_12.txt
ros2_okapi/src/rviz_panel/resource/: simple_panel.ui
ros2_okapi/src/rviz_panel/src/: rviz_panel.cpp
