<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>rfh_handheld_description</name>
  <version>0.0.0</version>
  <description>The rfh_handheld_description package</description>
  <maintainer email="rfid@todo.todo">rfid</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    

  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
