<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>rfidbot_tags_localization</name>
  <version>0.0.0</version>
  <description>The rfidbot_tags_localization package</description>
  <maintainer email="rfid@todo.todo">rfid</maintainer>
  <license>TODO</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rfidbot_tags_reader</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rfidbot_tags_reader</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rfidbot_tags_interfaces</exec_depend>
  <exec_depend>rfh_share_lib</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

    

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
