<?xml version="1.0"?>
<package format="3">
  <name>rviz_panel</name>
  <version>0.0.0</version>
  <description>The rviz-panel package</description>

  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/BruceChanJianLe/rviz-panel</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>

  <!-- RViz2 (ROS2) dependencies -->
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>

  <!-- Your packages -->
  <depend>rfidbot_tags_reader</depend>
  <depend>rfidbot_tags_interfaces</depend>

  <!-- Qt (usually pulled transitively, but explicit is OK) -->
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/rviz_plugin.xml"/>
  </export>
</package>
