<?xml version="1.0"?>
<package format="3">
  <name>rfh_share_lib</name>
  <version>0.0.1</version>
  <description>Shared library utilities for RFIDbot localization and control.</description>
  <maintainer email="rfid3@todo.todo">rfid3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
