<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rfidbot_tags_interfaces</name>
  <version>0.0.1</version>
  <description>Service and message interfaces for RFIDbot tag localization.</description>

  <maintainer email="rfid3@todo.todo">rfid3</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencies used by .srv/.msg files -->
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependency for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- This line is REQUIRED for any package that defines interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

